--- a/challange/templates/login.html
+++ b/challange/templates/login.html
@@ -1,35 +1,7 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>پنل مدیریت | صفحه ورود</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="{% static 'plugins/iCheck/square/blue.css' %}">
-  <!-- Google Font: Source Sans Pro -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" media="screen" href="{% static 'dist/css/flip-clock.css' %}" />
-  <!-- bootstrap rtl -->
-  <link rel="stylesheet" href="{% static 'dist/css/bootstrap-rtl.min.css' %}">
-  <!-- template rtl version -->
-  <link rel="stylesheet" href="{% static 'dist/css/custom-style.css' %}">
-  <link href="{% static 'dist/css/timer.css' %}" rel="stylesheet" type="text/css" media="all">
-</head>
-<body class="hold-transition login-page">
+{% block main %}
 <div class="login-box">
-  <div class="login-logo">
-    <a href="../../index2.html"><b>ورود به سایت</b></a>
-  </div>
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
@@ -41,7 +13,8 @@
             <span class="fa fa-phone input-group-text"></span>
           </div>
         </div>
-        <div class="input-group mb-3" id="verifCode">
+        {% csrf_token %}
+        <div class="input-group mb-3" id="verifCode" style="display:none;">
           <div class="row">
             <div class="col-12">
             
@@ -89,27 +62,6 @@
     <!-- /.login-card-body -->
   </div>
 </div>
-<!-- /.login-box -->
 
-<!-- jQuery -->
-<script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
-<!-- Bootstrap -->
-<script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<!-- iCheck -->
-<script src="{% static 'plugins/iCheck/icheck.min.js' %}"></script>
-<script src="{% static 'dist/js/login.js' %}"></script>
-<script src="{% static 'dist/js/flip-clock.js' %}"></script>
-{% comment %} <script src="../jquery.js"></script> {% endcomment %}
-<script src="{% static 'dist/js/jquery.simple.timer.js' %}"></script>
 
-<script>
-  $(function () {
-    $('input').iCheck({
-      checkboxClass: 'icheckbox_square-blue',
-      radioClass   : 'iradio_square-blue',
-      increaseArea : '20%' // optional
-    })
-  })
-</script>
-</body>
-</html>
+{% endblock main %}
