--- a/challange/templates/dashboardBase.html
+++ b/challange/templates/dashboardBase.html
@@ -23,16 +23,7 @@
   <link rel="stylesheet" href="{% static 'dist/css/custom-style.css' %}">
 
 </head>
-<!--
-BODY TAG OPTIONS:
-=================
-Apply one or more of the following classes to to the body tag
-to get the desired effect
-|---------------------------------------------------------|
-|LAYOUT OPTIONS | sidebar-collapse                        |
-|               | sidebar-mini                            |
-|---------------------------------------------------------|
--->
+
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
   <!-- Navbar -->
@@ -72,13 +63,27 @@ to get the desired effect
         <!-- Sidebar Menu -->
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-            <!-- Add icons to the links using the .nav-icon class
-                 with font-awesome or any other icon font library -->
             <li class="nav-item has-treeview menu-open">
-              <a href="#" class="nav-link active">
-                <i class="nav-icon fa fa-dashboard"></i>
+              <a href="/adminDashboard/first/1" class="nav-link active">
+                <i class="nav-icon fa fa-caret-left"></i>
                 <p>
-                  داشبورد
+                  مسابقه اول
+                </p>
+              </a>
+            </li>
+            <li class="nav-item has-treeview menu-open">
+              <a href="/adminDashboard/second/1" class="nav-link active">
+                <i class="nav-icon fa fa-caret-left"></i>
+                <p>
+                  مسابقه دوم
+                </p>
+              </a>
+            </li>
+            <li class="nav-item has-treeview menu-open">
+              <a href="/adminDashboard/third/1" class="nav-link active">
+                <i class="nav-icon fa fa-caret-left"></i>
+                <p>
+                  مسابقه سوم
                 </p>
               </a>
             </li>
@@ -98,7 +103,7 @@ to get the desired effect
         <div class="row mb-2">
           <div class="col-sm-6">
             <h1 class="m-0 text-dark">داشبورد</h1>
-          </div><!-- /.col -->
+          </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-left">
               <li class="breadcrumb-item"><a href="#">خانه</a></li>
